@startuml
'https://plantuml.com/class-diagram
title __PAGES's Class Diagram__\n
 namespace com.pages {
    class com.pages.DashboardPage {
        + DashboardPage()
        + isCorrectPage()
    }
  }


  namespace com.pages {
    class com.pages.Login {
        + clickLogin()
        + enterUserName()
        + enterUserPassword()
        + forgetPassword()
    }
  }


  namespace com.pages {
    class com.pages.Verify {
        + getLoginButton()
        + getPasswordBox()
        + getUserNameBox()
        + verifyTitlePage()
    }
  }


  namespace com.pages {
    class com.pages.VerifyDashBoard {
        + getLinkCount()
        + isChecked()
    }
  }


  namespace com.pages {
    class com.pages.forgetPassWordPage {
        + forgetPassWordPage()
    }
  }


  com.pages.DashboardPage -up-|> com.pages.Login
  com.pages.Login -up-|> com.seleniumBase.MyBrowser
  com.pages.Verify -up-|> com.seleniumBase.MyBrowser
  com.pages.VerifyDashBoard -up-|> com.pages.Login
  com.pages.forgetPassWordPage -up-|> com.pages.Login




  namespace com.seleniumBase {
    class com.seleniumBase.MyBrowser {
        {static} + driver : RemoteWebDriver
        {static} + properties : Properties
        + closeBrowser()
        + openBrowser()
    }
  }



@enduml